tests/type-error/CircularGlobal-Lambda.vix
f : Int
f = (\x. f) 1
